--- a/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
+++ b/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
@@ -1,5 +1,12 @@
 <template>
     <lightning-card title="Accounts" icon-name="standard:account">
-        
+        <lightning-datatable
+            data={rows}
+            columns={columns}
+            key-field="id"
+            sorted-by={sortBy}
+            sorted-direction={sortDirection}
+            onsort={handleSortData}>
+        </lightning-datatable>
     </lightning-card>
 </template>
