--- a/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
+++ b/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
@@ -1,12 +1,42 @@
 <template>
+
+
     <lightning-card title="Accounts" icon-name="standard:account">
-        <lightning-datatable
-            data={rows}
-            columns={columns}
-            key-field="id"
-            sorted-by={sortBy}
-            sorted-direction={sortDirection}
-            onsort={handleSortData}>
-        </lightning-datatable>
+
+        <lightning-layout vertival-align="stretch" multiple-rows="true" class="x-large">
+
+            <lightning-layout-item size="12" padding="around-small">
+
+                <div class="searchBox">
+                        <lightning-input 
+                        class="slds-m-left_xx-large" 
+                        type="search" 
+                        label="Search Accounts" 
+                        placeholder="Enter Account Name" 
+                        onchange={handleSearch}>
+                    </lightning-input>
+                </div>
+
+            </lightning-layout-item>
+            
+            <lightning-layout-item size="12" padding="around-small">
+                <lightning-datatable
+                    data={displayedRows}
+                    columns={columns}
+                    key-field="id"
+                    sorted-by={sortBy}
+                    sorted-direction={sortDirection}
+                    onsort={handleSortData}
+                    onsave={handleSave}
+                    draft-values={draftValues} 
+                    hide-checkbox-column 
+                    show-row-number-column>
+                </lightning-datatable>
+            </lightning-layout-item>
+
+        </lightning-layout>
+
     </lightning-card>
 </template>
+
+
