--- a/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
+++ b/force-app/main/default/lwc/financialServicesAccountsList/financialServicesAccountsList.html
@@ -1,7 +1,7 @@
 <template>
 
 
-    <lightning-card title="Accounts" icon-name="standard:account">
+    <lightning-card title="Financial Services Account Listing" icon-name="standard:account">
 
         <lightning-layout vertival-align="stretch" multiple-rows="true" class="x-large">
 
